--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Web development level 9 using todos. ejs temlpates
+Using Expressjs , todo manager is designed . Using jest testing, creating a todo , marking it as completd, deleting it, getting the list of all todos are done.
