--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-LEVEL 10 user adde dto old repository
+Web development with Node JS . Todo amnager is designed using EJS templates, postgresql database and user accountcreation and validation is also done.
