--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Web development with Node JS . Todo amnager is designed using EJS templates, postgresql database and user accountcreation and validation is also done.
+Web development with Node JS . Todo manager is designed using EJS templates, postgresql database and user account creation and validation is also done.
